# C-lab-project

./: .gitignore  .project  CMakeLists.txt  README.md  assembler.c  assembler.h  cmdTable.c  cmdTable.h  constants.h  converter.c  converter.h  dataTable.c  dataTable.h  errorHandler.c  errorHandler.h  errorStates.c  errorStates.h  file-check.txt  firstCycle.c  firstRun.c  main.c  makefile  parser.c  saveFiles.c  saveFiles.h  secondCycle.c  secondRun.c  structs.h  structures.h  symbolStructs.h  symbolTable.c  symbolTable.h  test1.as  test2.as  test3.as  test4.as  yakir's says  yakir's-says
example-output/: test1.as  test1.ent  test1.ext  test1.ob  test2.as  test2.ob
